[package]
name = "iambusy"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2021"
license = "MIT"
description = "I am busy."
homepage = "https://github.com/replicadse/iambusy"
repository = "https://github.com/replicadse/iambusy"
keywords = ["iambusy"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[[bin]]
name = "iambusy"
path = "./src/main.rs"

[features]
default = []

[dependencies]
async-trait = "0.1.82"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = "4.5.18"
clap_complete = "4.5.26"
clap_mangen = "0.2.23"
clap-markdown = "0.1.4"
anyhow = "1.0.87"
chrono = "0.4.38"
enigo = "0.2.1"
parse_duration = "2.1.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
hoox = "0.3.0"
